change img layout and opacity with img not showing bug to be fixed

--- a/sites/all/themes/lacuna_stories/sass/components/views.scss
+++ b/sites/all/themes/lacuna_stories/sass/components/views.scss
@@ -53,6 +53,12 @@ div.views-row-even span.views-field-field-image div.topic_image {
   padding-left: 20px;
 }
 
+// div.views-row-even.views-field-field-image.topic_image {
+//   float: right;
+//   padding-left: 20px;
+// }
+
+
 div.views-row-last span.views-field-field-image div.topic_image  {
   float: right;
   padding-left: 20px;
@@ -99,19 +105,43 @@ $views-link-hover-color: #1588BA;
     }
   }
   img {
-    width: auto;
-    height: auto;
+    width: 100%;
+    height: 250px;
     max-width: 100%;
     max-height: 100%;
     box-shadow: 0px 0px 10px #888888;
   }
 
-  .views-row {
-    float: left;
-    width: 150px;
-    margin: 0px 0px 0px 0px;
-    height: 350px;
+  // .views-row {
+  //   // position: relative;
+  //   // background-color: #000000;
+  //   opacity: 1;
+  //   float: left;
+  //   width: 150px;
+  //   margin: 10px;
+  //   border: 10px;
+  //   border-style: solid;
+  //   border-color: #C8C8C8;
+  //   height: 250px;
+  //   .views-field-created,
+  //   .views-label-created {
+  //     // display: none;
+  //     top: 0px;
+  //     left: 0px;
+  //     color: #A00000;
+  //     opacity: 0    
+  //   }
+  //   .views-field-created:parent,
+  //   .views-label-created:parent {
+  //     background-color: #A00000;    
+  //   }
+
+  // }
+
+  .views-row:hover {
+    opacity: 0.5;
   }
+
   .views-exposed-widget {
     margin-top: 0px;
   }
